# markdown-diagrams

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: api.rst  changelog.rst  conf.py  examples.rst  index.rst  requirements.txt  usage.rst
examples/: all_diagram_types.md
markdown_diagrams/: __init__.py  dependencies.py  extractors.py  main.py  renderers.py  validators.py
src/: __init__.py  extractors.py  main.py
src/ursula.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: __init__.py  test_dependencies.py  test_extractors.py  test_main.py  test_renderers.py  test_validators.py
tests/data/: __init__.py  bold_labels.md  entitlement_service.md  fixable_diagrams.md  mixed_types.md  multiple_diagrams.md  no_diagrams.md  simple_flowchart.md
